--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "require": {
     "monolog/monolog": "1.0.*"
   },
+  "license": "Apache-2.0",
   "version": "1.0.0",
   "autoload": {
     "psr-4": {
