--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "zouxiaozhu/hello-world",
   "require": {
-    "monolog/monolog": "1.0.*"
+    "monolog/monolog": "^2.0"
   },
   "license": "Apache-2.0",
   "version": "1.0.0",
